--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <h1 class="red-termin">ZAKAŽITE BESPLATAN PREGLED</h1>
             </div>
             <div class="contact-termin">
-              <h1 class="white-termin">+381 000 000</h1>
+              <h1 class="white-termin">0654636548</h1>
             </div>
           </div>
 
@@ -136,14 +136,14 @@
                 <img alt="Dental centar Vasilić" src="img/clock.svg" />
                 <span class="working-h">RADNO VREME</span>
                 <div class="working-days first">
-                  <p class="days">Ponedeljak - Petak</p>
+                  <p class="days">Ponedeljak, Sreda, Petak</p>
                   <p class="days">-</p>
-                  <p class="days">08:00 - 20:00</p>
+                  <p class="days">07:00 - 15:00</p>
                 </div>
                 <div class="working-days">
-                  <p class="days">Subota</p>
+                  <p class="days">Utorak, Četvrtak, Subota</p>
                   <p class="days">-</p>
-                  <p class="days">09:00 - 13:00</p>
+                  <p class="days">14:00 - 20:00</p>
                 </div>
                 <div class="working-days">
                   <p class="days">Nedelja</p>
@@ -160,21 +160,13 @@
                 <div class="radno-vreme">
                   <img alt="Dental centar Vasilić" src="img/clock.svg" />
                   <span class="working-h">KONTAKT</span>
-                  <div class="working-days first">
-                    <p class="days">Mob:</p>
-                    <p class="days">+381 000 000(<b>VIBER</b>)</p>
-                  </div>
                   <div class="working-days">
                     <p class="days">Tel:</p>
-                    <p class="days">+381 000 000</p>
-                  </div>
-                  <div class="working-days">
-                    <p class="days">Tel:</p>
-                    <p class="days">+381 000 000</p>
+                    <p class="days">0654636548</p>
                   </div>
                   <div class="working-days">
                     <p class="days">E-mail:</p>
-                    <p class="days">test@gmail.com</p>
+                    <p class="days">drsvetlana.ns@yahoo.com</p>
                   </div>
                 </div>
               </div>
@@ -379,12 +371,12 @@
             </div>
             <div class="social-net">
               <span class="icon-lokacija fb-hover"
-                ><span class="fb">Novi Sad, ul. Janka Čmelika br. 76</span></span
+                ><span class="fb">N. Sad, ul. Janka Čmelika br. 76</span></span
               >
-              <span class="icon-telefon inst-hover"><span class="fb">+381 51 230-700</span></span>
+              <span class="icon-telefon inst-hover"><span class="fb">0654636548</span></span>
               <span class="icon-poruka youtube-hover"
-                ><a href="mailto:test@gmail.com" class="fb"
-                  >test@gmail.com</a
+                ><a href="mailto:drsvetlana.ns@yahoo.com" class="fb"
+                  >drsvetlana.ns@yahoo.com</a
                 ></span
               >
             </div>
@@ -464,7 +456,7 @@
                 <h1 class="red-termin">ZAKAŽITE BESPLATAN PREGLED</h1>
               </div>
               <div class="contact-termin">
-                <h1 class="white-termin">+381 000 000</h1>
+                <h1 class="white-termin">0654636548</h1>
               </div>
             </div>
 
@@ -474,42 +466,34 @@
                   <img alt="Dental centar Vasilić" src="img/clock.svg" />
                   <span class="working-h">RADNO VREME</span>
                   <div class="working-days first">
-                    <p class="days">Ponedeljak - Petak</p>
-                    <p class="days">00:00 - 00:00</p>
+                    <p class="days">Ponedeljak, Sreda, Petak</p>
+                    <p class="days">07:00 - 15:00</p>
                   </div>
                   <div class="working-days">
-                    <p class="days">Subota</p>
-                    <p class="days">00:00 - 00:00</p>
+                    <p class="days">Utorak, Četvrtak, Subota</p>
+                    <p class="days">14:00 - 20:00</p>
                   </div>
                   <div class="working-days">
                     <p class="days">Nedelja</p>
                     <p class="days">Neradni dan</p>
                   </div>
                   <div class="working-days">
-                    <!-- <p class="days">Adresa:</p> -->
-                    <p class="days">Novi Sad, ul. Janka Čmelika br. 76</p>
+                    <p class="days">Adresa:</p>
+                    <p class="days">N. Sad, ul. Janka Čmelika br. 76</p>
                   </div>
                 </div>
                 <div class="info-contact radno-vreme">
                   <div class="radno-vreme">
                     <img alt="Dental centar Vasilić" src="img/phone-termin.svg" />
                     <span class="working-h">KONTAKT</span>
-                    <div class="working-days first">
-                      <p class="days">Mob:</p>
-                      <p class="days">+381 000 000 (<b>VIBER</b>)</p>
-                    </div>
                     <div class="working-days">
                       <p class="days">Tel:</p>
-                      <p class="days"><a href="tel:+000000000000">+381 000 000</a></p>
-                    </div>
-                    <div class="working-days">
-                      <p class="days">Tel:</p>
-                      <p class="days"><a href="tel:+0000000000#365db400">+381 000 000</a></p>
+                      <p class="days"><a href="tel:+0000000000#365db400">0654636548</a></p>
                     </div>
                     <div class="working-days">
                       <p class="days">E-mail:</p>
                       <p class="days">
-                        <a href="mailto:test@gmail.com">test@gmail.com</a>
+                        <a href="mailto:drsvetlana.ns@yahoo.com">drsvetlana.ns@yahoo.com</a>
                       </p>
                     </div>
                   </div>
@@ -2112,13 +2096,13 @@
                 class="icon-lokacija fb-hover no-hover"
                 href="https://www.google.com/maps/place/%D0%88%D0%B0%D0%BD%D0%BA%D0%B0+%D0%A7%D0%BC%D0%B5%D0%BB%D0%B8%D0%BA%D0%B0+76,+%D0%9D%D0%BE%D0%B2%D0%B8+%D0%A1%D0%B0%D0%B4/@45.2626299,19.8100402,19.5z/data=!4m13!1m7!3m6!1s0x475b11b1950e68ff:0x88f5e1e6d228055f!2z0IjQsNC90LrQsCDQp9C80LXQu9C40LrQsCA3Niwg0J3QvtCy0Lgg0KHQsNC0!3b1!8m2!3d45.2624405!4d19.8102013!3m4!1s0x475b11b1950e68ff:0x88f5e1e6d228055f!8m2!3d45.2624405!4d19.8102013"
                 target="_blank"
-                ><span class="fb">Novi Sad, ul. Janka Čmelika br. 76</span></a
+                ><span class="fb">N. Sad, ul. Janka Čmelika br. 76</span></a
               >
               <a href="tel:+30000000000" class="icon-telefon inst-hover"
-                ><span class="fb">+381 000 000</span></a
+                ><span class="fb">0654636548</span></a
               >
-              <!-- <a class="icon-poruka youtube-hover" href="mailto:test@gmail.com"
-                ><span class="fb">test@gmail.com</span></a
+              <!-- <a class="icon-poruka youtube-hover" href="mailto:drsvetlana.ns@yahoo.com"
+                ><span class="fb">drsvetlana.ns@yahoo.com</span></a
               > -->
             </div>
             <div class="red-line"></div>
