--- a/index.html
+++ b/index.html
@@ -309,15 +309,6 @@
                 <li>
                   <a href="usluge/16/laseroterapija.html">LASEROTERAPIJA</a>
                 </li>
-                <li>
-                  <a href="usluge/17/ozonoterapija-ili-terapija-ozonom.html"
-                    >OZONOTERAPIJA ILI TERAPIJA OZONOM</a
-                  >
-                </li>
-                <li>
-                  <a href="usluge/18/rendgen-dijagnostika.html">RENDGEN DIJAGNOSTIKA</a>
-                </li>
-                <li>
                   <a href="usluge/19/zubni-implantati.html">ZUBNI IMPLANTATI</a>
                 </li> -->
               </ul>
@@ -1028,72 +1019,9 @@
             </div>
             <div class="slide">
               <img alt="Dental centar Vasilić" src="usluge_pocetna_slika/1530622805.png" />
-              <div class="slide-content">
-                <img alt="Dental centar Vasilić" src="usluge_thumbnail/1531385560.png" />
-
-                <h1 class="slide-content-heading">OZONOTERAPIJA ILI TERAPIJA OZONOM</h1>
-
-                <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptates totam perspiciatis ab modi alias quisquam ducimus eaque eum tempore. Eum tempore inventore provident consequatur qui eveniet doloribus sed ad.</a>
-
-                <!-- <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#85"
-                  data-value="85"
-                  >Korištenje ozonoterapije u stomatologiji</a
-                >
-                <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#99"
-                  data-value="99"
-                  >Liječenje sluznice – afti, herpesa, gljivičnih infekcija</a
-                >
-                <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#100"
-                  data-value="100"
-                  >Parodontološko liječenje</a
-                >
-                <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#101"
-                  data-value="101"
-                  >Liječenje halitoze (neugodnog zadaha)</a
-                >
-                <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#102"
-                  data-value="102"
-                  >Liječenje i profilaksa peri-implantitisa</a
-                >
-                <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#103"
-                  data-value="103"
-                  >Terapija oštećenih mekih tkiva</a
-                >
-                <a
-                  class="accordian-id"
-                  href="usluge/17/ozonoterapija-ili-terapija-ozonom.html#104"
-                  data-value="104"
-                  >Terapija rana koje sporo zacjeljuju, inficiranih rana i upalnih procesa</a
-                >
-
-                <a href="usluge/17/ozonoterapija-ili-terapija-ozonom.html" class="more"
-                  >Vidi više</a
-                > -->
-              </div>
             </div>
             <div class="slide">
               <img alt="Dental centar Vasilić" src="usluge_pocetna_slika/1535375024.png" />
-              <div class="slide-content">
-                <img alt="Dental centar Vasilić" src="usluge_thumbnail/1535375025.png" />
-
-                <h1 class="slide-content-heading">RENDGEN DIJAGNOSTIKA</h1>
-
-                <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptates totam perspiciatis ab modi alias quisquam ducimus eaque eum tempore. Eum tempore inventore provident consequatur qui eveniet doloribus sed ad.</a>
-
-                <!-- <a href="usluge/18/rendgen-dijagnostika.html" class="more">Vidi više</a> -->
-              </div>
             </div>
           </div>
 
@@ -1569,7 +1497,7 @@
         </div>
       </div>
 
-      <!-- <div id="stomatoloski-centar">
+      <div id="stomatoloski-centar">
         <div class="stomatoloski-centar-wrap">
           <div class="gallery-enterior">
             <div class="main-gallery">
@@ -1577,10 +1505,31 @@
                 <img
                   alt="Dental centar Vasilić"
                   src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                  data-src="enterijer_gallery/test-enterijer.jpg"
+                  data-src="enterijer_gallery/enterijer-1.jpg"
                 />
               </div>
               <div class="gallery-slide">
+                <img
+                  alt="Dental centar Vasilić"
+                  src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                  data-src="enterijer_gallery/enterijer-2.jpg"
+                />
+              </div>
+              <div class="gallery-slide">
+                <img
+                  alt="Dental centar Vasilić"
+                  src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                  data-src="enterijer_gallery/enterijer-3.jpg"
+                />
+              </div>
+              <div class="gallery-slide">
+                <img
+                  alt="Dental centar Vasilić"
+                  src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                  data-src="enterijer_gallery/enterijer-4.jpg"
+                />
+              </div>
+              <!-- <div class="gallery-slide">
                 <img
                   alt="Dental centar Vasilić"
                   src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
@@ -1642,28 +1591,7 @@
                   src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
                   data-src="enterijer_gallery/test-enterijer.jpg"
                 />
-              </div>
-              <div class="gallery-slide">
-                <img
-                  alt="Dental centar Vasilić"
-                  src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                  data-src="enterijer_gallery/test-enterijer.jpg"
-                />
-              </div>
-              <div class="gallery-slide">
-                <img
-                  alt="Dental centar Vasilić"
-                  src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                  data-src="enterijer_gallery/test-enterijer.jpg"
-                />
-              </div>
-              <div class="gallery-slide">
-                <img
-                  alt="Dental centar Vasilić"
-                  src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                  data-src="enterijer_gallery/test-enterijer.jpg"
-                />
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -1677,11 +1605,11 @@
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div id="video-gal-section">
+      <div id="video-gal-section">
         <div class="video-gal-wrap">
-          <div class="video-gal-text">
+          <!-- <div class="video-gal-text">
             <div class="red-line"></div>
             <h1 class="main-content-heading">ZA VAŠ I NAŠ OSMEH</h1>
             <p class="main-content-p">
@@ -1695,9 +1623,9 @@
               class="testemonials-yt"
               >Youtube</a
             >
-          </div>
+          </div> -->
 
-          <div class="video-main-gal">
+          <!-- <div class="video-main-gal">
             <div class="video-main-slide">
               <div class="video-slide-cover-pic">
                 <img
@@ -1746,9 +1674,9 @@
                 />
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
-      </div> -->
+      </div>
 
       <!-- <div id="video-epizode">
         <div class="video-epizode-wrap">
